# ros_qml_template

./: .gitignore  CMakeLists.txt  README.md  main.cpp  main.qml  package.xml  qml.qrc
launch/: ros_qml_example.launch
msg/: foo.msg
resources/: MyRectangle.qml  qmldir
